--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <footer>
         <p>
 
-            Notation generated with Verovio version <a href="http://github.com/rism-digital/verovio/commit/a99660b" id="version">4.0.1-a99660b</a>
+            Notation generated and rendered with <a href="https://github.com/rism-digital/verovio" id="version">Verovio</a>
 
         </p>
     </footer>
