--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,11 +20,7 @@
     </div>
 
     <footer>
-        <p>
-
-            Notation generated and rendered with <a href="https://github.com/rism-digital/verovio" id="version">Verovio</a>
-
-        </p>
+        <p>Notation generated and rendered with <a href="https://github.com/rism-digital/verovio" id="version">Verovio</a></p>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
