Got rid of the MEI code- it's still there, just hidden.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -188,7 +188,8 @@
 
             <div>
                 <!-- MEI text rendering-->
-                <pre id="mei_output" style="text-align: left; overflow: auto; width: auto; overflow-wrap: normal;">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
+                <!--style="text-align: left; overflow: auto; width: auto; overflow-wrap: normal; display: none;"-->
+                <pre id="mei_output" style="opacity: 0; height: 0; overflow: hidden;">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
                     &lt;?xml-model href="https://music-encoding.org/schema/5.0/mei-all.rng" type="application/xml" schematypens="http://relaxng.org/ns/structure/1.0"?&gt;
                     &lt;?xml-model href="https://music-encoding.org/schema/5.0/mei-all.rng" type="application/xml" schematypens="http://purl.oclc.org/dsdl/schematron"?&gt;
                     &lt;mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0"&gt;
