--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewData["Title"] - dayMelodySearch</title>
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!--This is what is making the css not work: -->
     <script src="https://www.verovio.org/javascript/latest/verovio-toolkit.js"></script>
+
     <script src="~/lib/jquery/dist/jquery-3.6.0.min.js"></script>
 </head>
 <body>
